@@ -3933,6 +3933,9 @@ enum : uint16_t
 
     STR_TILE_INSPECTOR_TRACK_BRAKE_CLOSED = 6539,
 
+    STR_ABOUT_SPECIAL_THANKS_1 = 6540,
+    STR_ABOUT_SPECIAL_THANKS_2 = 6541,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
