@@ -8,6 +8,7 @@
 - Improved: [#18826] [Plugin] Added all actions and their documentation to plugin API.
 - Improved: [#18945] Languages can now fall back to other languages than English.
 - Improved: [#18970] Trying to load a non-park save will now display a context error.
+- Improved: [#19044] Added special thanks to RMC and Wiegand to the About page.
 - Fix: [#18467] “Selected only” Object Selection filter is active in Track Designs Manager, and cannot be toggled.
 - Fix: [#18905] Ride Construction window theme is not applied correctly.
 - Fix: [#18911] Mini Golf station does not draw correctly from all angles.
